# ensalamento-SCIP

./: CMakeLists.txt  LICENSE  lancador  main-bck.cpp  main.cpp
